# quicksales-desktop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts  数据库更新说明.md  项目进度报告.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: category_commands.rs  customer_commands.rs  mod.rs  order_commands.rs  product_commands.rs  remark_preset_commands.rs  template_commands.rs  unit_preset_commands.rs
src-tauri/src/database/: connection.rs  mod.rs  schema.rs
src-tauri/src/models/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: EditItemModal.tsx  ErrorBoundary.tsx  NewCustomerModal.tsx  RemarkPresetSelector.tsx  ResizablePanel.tsx  UnitPresetSelector.tsx
src/components/layout/: TopNav.tsx  sidebar.tsx
src/components/order/: CartItemList.tsx  ProductSelection.tsx  QuickProductModal.tsx
src/components/ui/: Card.tsx  Modal.tsx  button.tsx  index.ts  input.tsx  label.tsx
src/constants/: defaultTemplateBase64.ts
src/hooks/: useDataLoader.ts
src/lib/: debounce.ts  utils.ts
src/pages/: CategoryManagement.tsx  CustomerManagement.tsx  OrderEntry.tsx  OrderHistory.tsx  PresetManagement.tsx  ProductManagement.tsx  RemarkPresets.tsx  SalesStatistics.tsx  Settings.tsx
src/providers/: ThemeProvider.tsx
src/services/: api.ts  excelService.ts
src/stores/: useStore.ts
src/types/: index.ts
